MultiModule reacts on changes.